all new student chats

--- a/public/Site Templates/site-wide.css
+++ b/public/Site Templates/site-wide.css
@@ -47,3 +47,7 @@
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
 }
+
+.noMargins {
+  margin: 0;
+}
