--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -27,14 +27,14 @@ div p {
 }
 
 .metaForm {
-    position: absolute;
+    grid-area: chart;
     display: flex;
     flex-direction: column;
     background-color: rgb(255, 255, 255);
     top: 10%;
     right: 2.5%;
-    width: 25%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     z-index: 3;
     border-radius: 15px;
 }
@@ -42,9 +42,21 @@ div p {
 .formTab {
     display: flex;
     flex-direction: row;
-    height: 8%;
+    height: 7.25%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+}
+
+.statusBarDiv {
+    height: 0.75%;
+    background-color: purple;
+    display: flex;
+    flex-direction: row;
+}
+
+.statusBar {
+    background-color: white;
+    flex-grow: 1;
 }
 
 .headingBlock {
@@ -75,6 +87,47 @@ div p {
     padding-left: 8%;
     padding-right: 8%;
     align-items: center;
+}
+
+.button {
+  margin-top: 20px;
+  width: 140px;
+  height: 45px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  color: #110D65;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.button:hover {
+  background-color: #110D65;
+  box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.testSubmitButton {
+  margin-bottom: 10px;
+  width: 140px;
+  height: 45px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 45px;
+  cursor: pointer;
+  outline: none;
+  text-align: center;
+  color: white;
 }
 
 .lessonHeaders {
@@ -157,6 +210,8 @@ div p {
 }
 
 .mainBody {
+    display: flex;
+    flex-direction: column;
     position: relative;
     height: 91vh;
     width: 100vw;
@@ -307,6 +362,24 @@ div p {
     align-items: center;
 }
 
+.input-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding-left: 8%;
+    padding-right: 8%;
+    align-items: center;
+}
+
+.input-column-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 8%;
+    padding-right: 8%;
+    align-items: center;
+}
+
 .side {
     width: 15%;
     height: 100%;
@@ -324,31 +397,6 @@ div p {
     background-color: rgb(200, 200, 200);
     align-items: center;
     text-align: center;
-}
-
-.button {
-  margin-top: 20px;
-  width: 140px;
-  height: 45px;
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 2.5px;
-  text-transform: uppercase;
-  color: #110D65;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-}
-
-.button:hover {
-  background-color: #110D65;
-  box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
-  color: #fff;
-  transform: translateY(-7px);
 }
 
 .smallButton {
@@ -375,8 +423,8 @@ div p {
   padding: 8px 0px 8px 0px;
   position: absolute;
   z-index: 4;
-  bottom: 6.5%;
-  right: 2%
+  bottom: 80px;
+  right: calc(3% + 12.5% - 100px - 85px);
 }
 
 /* Popup arrow */
@@ -384,11 +432,17 @@ div p {
   content: "";
   position: absolute;
   top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
+  left: calc(50% + 5px);
+  margin-left: -10px;
+  border-width: 10px;
   border-style: solid;
   border-color: #555 transparent transparent transparent;
+}
+
+.show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
 }
 
 .firstAnswer {
@@ -427,6 +481,40 @@ div p {
     text-align: center;
 }
 
+.smallerText {
+    text-transform: lowercase;
+    font-size: 10px;
+}
+
+.item{
+    text-align: center;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 14px;
+}
+
+.itemB1 {
+    grid-area: b1;
+}
+
+.itemB2 {
+    grid-area: b2;
+}
+
+.itemB1 h2 {
+    margin: 0px;
+}
+
+.itemB2 h2 {
+    margin: 0px;
+}
+
+.nextButton {
+    margin-left: 10px;
+}
+
 #logo {
     height: calc(0.75 * 9vh);
     width: calc(0.75 * 2.51 * 9vh);
@@ -440,11 +528,30 @@ div p {
     background-color: #8986b2;
 }
 
+#generalInfo {
+    height: 90%;
+    width: 100%;
+    background-color: #8986b2;
+    display: flex;
+    flex-direction: row;
+    /*display:grid;
+    grid-template-columns: 3% 25% 14% 25% 5% 25% 3%;
+    grid-template-rows: 2% 60% 5% 30% 3%;
+    grid-template-areas:
+    ".   .     .     .   .   .   . "
+    ". graph graph graph . chart . "
+    ".   .     .     .   . chart . "
+    ".  b1     .    b2   . chart . "
+    ".   .     .     .   .   .   . ";*/
+}
+
 #scores-chart {
-    margin-left: 3%;
     background-color: white;
-    height: 80%;
-    width: 67%;
+    /*max-width: 67%;*/
+    grid-area: graph;
+    /*height: 80%;
+    width: 67%;*/
+    border-radius: 14px;
 }
 
 #answerButton {
