--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -27,16 +27,15 @@ div p {
 }
 
 .metaForm {
-    grid-area: chart;
+    /*grid-area: chart;*/
     display: flex;
     flex-direction: column;
     background-color: rgb(255, 255, 255);
-    top: 10%;
-    right: 2.5%;
-    width: 100%;
-    height: 100%;
+    width: 24vw;
+    height: 80vh;
     z-index: 3;
     border-radius: 15px;
+    margin-right: 3%;
 }
 
 .formTab {
@@ -173,10 +172,6 @@ div p {
 
 .gridBox3:nth-child(3n) {
     border-right-width: 0px;
-}
-
-.hidden {
-    display: none;
 }
 
 .visibleBlock {
@@ -348,8 +343,6 @@ div p {
     display: flex;
     flex-direction: row;
     justify-content: left;
-    padding-left: 8%;
-    padding-right: 8%;
     align-items: center;
 }
 
@@ -357,8 +350,6 @@ div p {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-left: 8%;
-    padding-right: 8%;
     align-items: center;
 }
 
@@ -366,8 +357,6 @@ div p {
     display: flex;
     flex-direction: column;
     justify-content: left;
-    padding-left: 8%;
-    padding-right: 8%;
     align-items: center;
 }
 
@@ -375,8 +364,6 @@ div p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 8%;
-    padding-right: 8%;
     align-items: center;
 }
 
@@ -486,13 +473,24 @@ div p {
     font-size: 10px;
 }
 
-.item{
+.item {
     text-align: center;
     background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-radius: 14px;
+    width: 15vw;
+    height: 12vh;
+    margin-top: 5vh;
+}
+
+.evenlySpaced {
+    justify-content: space-evenly;
+}
+
+.item:first-child {
+    margin-left: 0vw;
 }
 
 .itemB1 {
@@ -515,13 +513,24 @@ div p {
     margin-left: 10px;
 }
 
+.graph {
+    width: 67vw;
+    flex: 1;
+    margin-right: 3%;
+    margin-left: 3%;
+}
+
+.hidden {
+    display: none;
+}
+
 #logo {
     height: calc(0.75 * 9vh);
     width: calc(0.75 * 2.51 * 9vh);
 }
 
 #nameSection {
-    height: 10%;
+    height: 10vh;
     width: 100%;
     align-items: center;
     /*background-color: blue;*/
@@ -529,11 +538,9 @@ div p {
 }
 
 #generalInfo {
-    height: 90%;
+    height: 80vh;
     width: 100%;
     background-color: #8986b2;
-    display: flex;
-    flex-direction: row;
     /*display:grid;
     grid-template-columns: 3% 25% 14% 25% 5% 25% 3%;
     grid-template-rows: 2% 60% 5% 30% 3%;
@@ -547,8 +554,9 @@ div p {
 
 #scores-chart {
     background-color: white;
-    /*max-width: 67%;*/
-    grid-area: graph;
+    max-width: 67vw;
+    max-height: 60vh;
+    /*grid-area: graph;*/
     /*height: 80%;
     width: 67%;*/
     border-radius: 14px;
