--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -739,6 +739,16 @@ button {
     margin-right: 10px;
 }
 
+.input-block-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 #actDiv {
     margin: 0;
 }
@@ -1400,3 +1410,28 @@ p.errorMessage {
         padding-left: 60px;
     }
 }
+
+.tinyButton {
+    cursor: pointer;
+    font-size: 12px;
+    width: 60px;
+    height: 30px;
+}
+/*button {
+  margin-bottom: 10px;
+  width: 140px;
+  height: 45px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  outline: none;
+  background-color: rgb(255, 0, 0);
+  text-align: center;
+  color: white;
+}*/
