--- a/public/calendar.css
+++ b/public/calendar.css
@@ -7,6 +7,27 @@
   height: 2em !important;
 }
 
+
+
+/* calendar highlight */
+.fc-highlight {
+  border: 1px solid transparent !important;
+  background: linear-gradient(rgba(225, 236, 244, 0.7), rgba(225, 236, 244, 0.7)) padding-box, repeating-linear-gradient(-45deg, black 0, black 25%, transparent 0, transparent 50%) 0 / .6em .6em !important;
+	animation: ants 12s linear infinite !important;
+}
+
+.fc-highlight::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  content: "";
+  background-color: rgba(225, 236, 244) !important;
+}
+
+@keyframes ants { to { background-position: 100% 100% } }
+
 .displayNone {
   display: none;
 }
@@ -21,6 +42,21 @@
   justify-content: start;
   margin: 20px 0px 20px 0px;
   padding: 0px 10px 0px 10px;
+  background-color: var(--primary-color);
+}
+
+.calendarNav .select {
+  background-image: none;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 8px 16px 8px 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.calendarNav .select:hover {
+  background-color: white;
+  color: var(--primary-color);
 }
 
 #mainCalendarContent {
@@ -37,11 +73,58 @@
 #sidebar {
   position: relative;
   float: left;
-  width: 20%;
   max-width: 400px;
   height: 100%;
   background-color: #f1f1f1;
   padding: 5px;
+}
+
+.sidebarContent {
+  height: calc(100% - 40px);
+  overflow-y: auto;
+}
+
+.sidebarList {
+  background-color: white;
+  max-height: 50%;
+  overflow-y: auto;
+  padding: 5px;
+}
+
+.sidebarList p {
+  margin: 0;
+  padding: 5px;
+}
+
+.sidebarList p.removed {
+  text-decoration: line-through;
+}
+
+.sidebarList p:hover {
+  background-color: #DDDDDD;
+}
+
+#sidebar h3 {
+  display: inline;
+}
+
+#sidebar .headerLine {
+  height: 2px;
+  width: 80%;
+  background-color: #ddd;
+  position: relative;
+  left: 10%;
+  border-radius: 1px;
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
+
+#sidebar.open {
+  width: 20%;
+}
+
+#sidebar.closed {
+  width: 0%;
 }
 
 .bottom {
@@ -50,8 +133,8 @@
 }
 
 .dropbtn {
-  background-color: white;
-  color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: white;
   padding: 8px 16px 8px 16px;
   font-size: 16px;
   border: none;
@@ -60,8 +143,8 @@
 .calendarNav .dropdown {
   position: relative;
   display: inline-block;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  border-radius: 10px;
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+  /* border-radius: 10px; */
 }
 
 .dropdown-content {
@@ -80,19 +163,23 @@
   display: block;
 }
 
+.dropdown-content div.selected {
+  display: none;
+}
+
 .dropdown-content div:hover {background-color: #ddd;}
 
 .calendarNav .dropdown:hover .dropdown-content {display: block;}
 
 .calendarNav .dropdown:hover .dropbtn {
-  background-color: var(--primary-color);
-  color: white;
+  background-color: white;
+  color: var(--primary-color);
 }
 
 .inputRow {
   display: flex;
   flex-direction: row;
-  margin: 5px;
+  margin: 5px 0px 5px 0px;
 }
 
 .inputRow p {
@@ -128,9 +215,19 @@ select {
   background-position: center right;
   background-origin: content-box;
   -webkit-appearance: none;
+  border-radius: 0;
 }
 
-.select {
+#sidebar .select {
+  background-color: #FFFFFF;
+  padding: 5px 10px 5px 5px;
+  width: 100%;
+  border-color: #DEDEDF;
+  border-width: 1px;
+  border-style: solid;
+}
+
+#sidebar .input {
   background-color: #FFFFFF;
   padding: 5px 10px 5px 5px;
   width: 100%;
@@ -162,7 +259,6 @@ select {
   border-color: lightslategray;
   border-width: 1px;
   margin-right: 5px;
-  margin-bottom: 5px;
   position: relative;
   box-sizing: content-box;
 }
