--- a/public/inquiry.css
+++ b/public/inquiry.css
@@ -284,6 +284,19 @@ select {
   content: url("Images/select-dropdown.png");
 }
 
+.ui.dropdown>.ui.label {
+  font-family: Roboto, sans-serif !important;
+  font-size: 16px !important;
+  font-weight: 200 !important;
+  color: black !important;
+}
+
+.ui.dropdown>.menu>.item {
+  font-family: Roboto, sans-serif !important;
+  font-size: 16px !important;
+  font-weight: 200 !important;
+}
+
 .input:disabled {
   visibility: hidden;
 }
