--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -1068,6 +1068,13 @@ span:hover + .wrap a, .wrap:hover a{
   grid-template-columns: minmax(0, auto) auto auto auto auto auto;
 }
 
+#studentGeneralInfoContainer .gridContainer :disabled {
+  color: white;
+  opacity: 1;
+  -webkit-text-fill-color: white !important;
+  -webkit-opacity: 1 !important;
+}
+
 #studentGeneralInfoContainer .gridContainer :nth-child(2) {
   border-top-left-radius: 5px;
 }
@@ -1104,13 +1111,6 @@ span:hover + .wrap a, .wrap:hover a{
   font-size: inherit;
 }
 
-#studentGeneralInfoContainer .gridContainer .gridHeaderItem:focus {
-  background-color: #80CBC4;
-  border-top: 1px solid #80CBC4;
-  border-bottom: 1px solid #80CBC4;
-  color: black;
-}
-
 #studentGeneralInfoContainer .gridContainer .gridItem {
   background-color: #3F4458;
   color: white;
@@ -1130,7 +1130,7 @@ span:hover + .wrap a, .wrap:hover a{
   border-bottom: 3px solid #80CBC4;
 }
 
-#studentGeneralInfoContainer .gridContainer .gridItem:focus {
+#studentGeneralInfoContainer .gridContainer :focus {
   background-color: #80CBC4;
   border-top: 1px solid #80CBC4;
   border-bottom: 1px solid #80CBC4;
