--- a/public/calendar.css
+++ b/public/calendar.css
@@ -406,6 +406,16 @@ select {
   color: white;
 }
 
+#addAvailabilityRecurringWrapper button.input:hover:not(.selected) {
+  background-color: #DEDEDF;
+}
+
+#addAvailabilityRecurringWrapper .selected {
+  border-color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: white;
+}
+
 #addLessonRecurringRadio:checked~#addLessonRecurringWrapper {
   display: block;
 }
